# Project_FileManager

./: .gitignore  LICENSE
backend/file_manager/: Cargo.toml  commands.txt
backend/file_manager/src/: main.rs
backend/file_manager/src/config/: constants.rs  macros.rs  mod.rs  utility.rs
backend/file_manager/src/enums/: app_enums.rs  enums.rs  mod.rs
backend/file_manager/src/global/: mod.rs  tcp_handler.rs
backend/file_manager/src/logger/: app_logger.rs  logger.rs
backend/file_manager/src/parser/: http_request.rs  http_response.rs
backend/file_manager/src/router/: extra_routes.rs  get_routes.rs  mod.rs  router_handler.rs
tools/json_formatter/: Cargo.toml  commands.txt
tools/json_formatter/src/: console.rs  lib.rs  logic.rs
tools/json_formatter/static/: index.html  index.js  package.json  webpack.config.js
tools/json_formatter/static/modules/: styles.scss
